--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<% @user ||= current_user %>
+
 <div class="row">
 	<div class="col-xs-3">
 		<h2>User info</h2>
@@ -27,7 +27,22 @@
 					<td><%= user.name%></td>
 					<td>フォロー数:<%= user.following.count%></td>
 					<td>フォロワー数:<%= user.followers.count%></td>
-
+					<td><% if user!=current_user %>
+								<div id="follow_form">
+									<% if current_user.following?(user)%>
+										<%= form_for(current_user.active_relationships.find_by(followed_id: user.id),
+												html:{method: :delete},remote: true) do |f| %>
+										<%= f.submit "Unfollow",class:"btn btn-primary"%>
+										<%end%>
+									<%else%>
+										<%= form_for(current_user.active_relationships.build,remote: true) do |f|%>
+											<%# 隠しフィールドのinputタグになる。ブラウザ上に表示せずに適切な情報を含むことができる %>
+											<div><%= hidden_field_tag :followed_id,user.id %></div>
+											<%= f.submit "Follow",class:"btn btn-success"%>
+										<%end%>
+									<%end%>
+								</div>
+							<%end%></td>
 					<td><%= link_to "Show", user, class: "user_#{user.id}" %></td>
 				</tr>
 				<% end %>
