[start]asynchronous_favorite

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,6 @@
-<%= render "shared/search"%>
+<%if current_user.present?%>
+	<%= render "shared/search"%>
+<%end%>
 <div class="row">
 	<div class="col-xs-3">
 		<h2>User info</h2>
