--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,6 @@
-<%= render "shared/search"%>
+<%if current_user.present?%>
+	<%= render "shared/search"%>
+<%end%>
 <div class="row">
 	<div class="col-xs-3">
 
@@ -34,18 +36,18 @@
 					</td>
 					<td><%= link_to book.title, book, class: "book_#{book.id}" %></td>
 					<td><%= book.body %></td>
-					<td><% if current_user.already_favorited?(book) %>
-							<%= link_to book.favorited_users.count, book_favorites_path(book), method: :delete ,class: 'fas fa-kiss-wink-heart favorite'%>
-						<% else %>
-							<%= link_to book.favorited_users.count, book_favorites_path(book), method: :post ,class: 'far fa-kiss-wink-heart'%>
-						<% end %>
+					<td>
+					<%# ajaxで部分的に更新用にdiv、idでくくる %>
+						<div id="favorites_buttons_<%=book.id%>">
+							<%= render partial: 'favorites/favorite', locals: { book: book} %>
+						</div>
 					</td>
 					<td>
 						<% if book.post_comments.present? %>
 							<%= link_to "#{book.post_comments.count}", book_path(book) ,class:"fas fa-comment-dots"%>
 						<%else%>
 							<%= link_to "#{book.post_comments.count}", book_path(book) ,class:"far fa-comment-dots"%>
-						<%end%>
+						<%end%>			
 					</td>
 				</tr>
 				<% end %>
