--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -31,9 +31,9 @@
 					</div></td>
 				<td>
 					<% if @book.post_comments.present? %>
-						<%= link_to "#{@book.post_comments.count}", book_path(@book.id) ,class:"fas fa-comment-dots"%>
+						<%= link_to "#{@book.post_comments.count}", book_path(@book.id) ,class:"fas fa-comment-dots",id: "comment"%>
 					<%else%>
-						<%= link_to "#{@book.post_comments.count}", book_path(@book.id) ,class:"far fa-comment-dots"%>
+						<%= link_to "#{@book.post_comments.count}", book_path(@book.id) ,class: "far fa-comment-dots"%>
 					<%end%></td>
 				<% if user_signed_in? && @book.user_id==current_user.id%>
 					<td><%= link_to "Edit",edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
