--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -70,7 +70,14 @@ body {
     padding: 0;
   }
 }
-
 .users.follow {
   padding: 0;
+}
+
+#map {
+  height: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+  width: 80%;
 }
