--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,8 @@
       <% end %>
         <p id="notice"><%= notice %></p> <!--デバイスでnotice設定されているので呼び出してるだけ-->
       <%= yield%>
+      <%# <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDW0GOeuDWuLqYivC7vBa1qn7cNdj0Qadw&callback=initMap" async defer></script> %>
+      
     </div>
   </body>
 </html>
