--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -50,3 +50,25 @@
 		<!--books一覧 -->
 	</div>
 </div>
+
+<% if @user.id == current_user.id%>
+	<h2>Your Map</h2>
+	<div id="map"></div>
+
+
+
+<script>
+      function initMap() {
+        var uluru = {lat: <%= @user.latitude %>, lng: <%= @user.longitude %>};
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 16,
+          center: uluru
+        });
+        var marker = new google.maps.Marker({
+          position: uluru,
+          map: map
+        });
+      }
+    </script>
+<script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GMAP_API_KEY'] %>&callback=initMap" async defer></script>
+<% end %>
